# cleankoda

./: .gitignore  AGENTS.md  CONTEXT.md  CREDITS.txt  Dockerfile.agent  Dockerfile.cleankoda-agent  Dockerfile.cleankoda-frontend  Dockerfile.java-node  Dockerfile.java-node-orig  Dockerfile.workbench-java-backend  MESSAGE_STACK_SPEC.md  README-local-workbench.md  README.md  VISION.md  docker-compose-coding-agent.yaml  docker-compose.yaml  dotenv  goal_of_poc.md  logging.json  pyproject.toml  pytest.ini  run_agent.py  run_web.py
.github/workflows/: pylint.yml
app/: __init__.py  main.py
app/agent/: graph.py  runtime.py  state.py  system_mappings.py  trello_client.py  utils.py  worker.py
app/core/: __init__.py  config.py  constants.py  db_task_utils.py  environment_settings.py  extensions.py  issue_utils.py  models.py  plan_services.py  plan_utils.py  repositories.py  security.py  task_repository.py  task_utils.py  trello_repository.py  types.py  utils.py
app/web/: __init__.py  routes.py
doc/: architecture-blueprint.md  environment_settings.md  issue-management.md  local_debugging.md  logging.md  message-handling.md  task-management.md
doc/poc/: README.md  (+2 more)
docs/: message-handling.md
prompts/: prompt_analyzing.md  prompt_coder.md  prompt_coding.md  prompt_routing.md  prompt_testing.md  systemprompt_analyst.md  systemprompt_bugfixer.md  systemprompt_coder_backend.md  systemprompt_coder_frontend.md  systemprompt_coder_gradle-node.md  systemprompt_router.md  systemprompt_tester.md
tests/: conftest.py  test_routing_logic.py  test_summaries.py  test_workflow.py
(+257 files in other folders)
